[workspace]
resolver = "2"
members = [
    "clomonitor-apiserver",
    "clomonitor-archiver",
    "clomonitor-core",
    "clomonitor-linter",
    "clomonitor-notifier",
    "clomonitor-registrar",
    "clomonitor-tracker",
]

[workspace.package]
version = "1.0.0"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.96.1"

[workspace.dependencies]
anyhow = "1.0.103"
askalono = "0.5.0"
askama = { version = "0.16.0", features = ["serde_json"] }
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["macros"] }
bincode = { version = "2.0.1", features = ["serde"] } # do-not-upgrade
cached = { version = "0.56.0", features = ["async"] }
clap = { version = "4.6.1", features = ["derive"] }
clomonitor-core = { path = "../clomonitor-core" }
comfy-table = "7.2.2"
config = "0.15.25"
deadpool = "0.13.0"
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
futures = "0.3.32"
git2 = "0.21.0"
glob = "0.3.3"
graphql_client = { version = "0.16.0", features = ["reqwest"] }
hex = "0.4.3"
http = "1.4.2"
hyper = "1.10.1"
metrics = "0.24.6"
metrics-exporter-prometheus = { version = "0.18.3", default-features = false, features = ["http-listener"] }
mime = "0.3.17"
mockall = "0.14.0"
mockito = "1.7.2"
octorust = "0.3.2" # do-not-upgrade
openssl = { version = "0.10.81", features = ["vendored"] }
postgres-openssl = "0.5.3"
postgres-types = { version = "0.2.14", features = ["derive"] }
predicates = "3.1.4"
regex = "1.12.4"
reqwest = { version = "0.13.4", features = ["json"] }
resvg = "0.27.0" # do-not-upgrade
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
serde_qs = "1.1.2"
sha2 = "0.10.9"
tempfile = "3.27.0"
tera = { version = "1.20.1", default-features = false }
thiserror = "2.0.18"
time = { version = "0.3.53", features = [
    "formatting",
    "macros",
    "parsing",
    "serde",
] }
tiny-skia = "0.8.4" # do-not-upgrade
tokio = { version = "1.52.3", features = [
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "time",
] }
tokio-postgres = { version = "0.7.18", features = [
    "with-time-0_3",
    "with-serde_json-1",
    "with-uuid-1",
] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.7.0", features = [
    "auth",
    "fs",
    "set-header",
    "trace",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
usvg = "0.27.0" # do-not-upgrade
uuid = { version = "1.23.4", features = ["serde"] }
which = "8.0.4"
wiremock = "0.6.5"
