[package]
name = "clomonitor-apiserver"
description = "Server that exposes the CLOMonitor HTTP API and serves static assets"
version = "0.6.0"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.58"

[dependencies]
anyhow = "1.0.57"
askama = { git = "https://github.com/djc/askama", rev = "ab39ced64e4a56b741ee32487d3340e008c7e4fb" }
askama_axum = { git = "https://github.com/djc/askama", rev = "ab39ced64e4a56b741ee32487d3340e008c7e4fb" }
async-trait = "0.1.53"
axum = "0.5.4"
axum-debug = "0.3.3"
clap = { version = "3.1.15", features = ["derive"] }
clomonitor-core = { path = "../clomonitor-core" }
config = "0.13.1"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
mime = "0.3.16"
openssl = { version = "0.10.39", features = ["vendored"] }
postgres-openssl = "0.5.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.80"
tokio = {version = "1.17.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-postgres = { version = "0.7.6", features = ["with-uuid-1", "with-serde_json-1"] }
tower = "0.4.12"
tower-http = { version = "0.3.2", features = ["auth", "fs", "trace"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

[dev-dependencies]
hyper = "0.14.18"
mockall = "0.11.0"
