[package]
name = "clomonitor-apiserver"
description = "Server that exposes the CLOMonitor HTTP API and serves static assets"
version = "0.6.0"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.58"

[dependencies]
anyhow = "1.0.57"
askama = { git = "https://github.com/djc/askama", rev = "71267bc88554c15caf4ee1e7c0d256556303e0e8" }
askama_axum = { git = "https://github.com/djc/askama", rev = "71267bc88554c15caf4ee1e7c0d256556303e0e8" }
async-trait = "0.1.56"
axum = "0.5.7"
clap = { version = "3.2.6", features = ["derive"] }
clomonitor-core = { path = "../clomonitor-core" }
config = "0.13.1"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
lazy_static = "1.4.0"
metrics = "0.19.0"
metrics-exporter-prometheus = "0.10.0"
mime = "0.3.16"
openssl = { version = "0.10.40", features = ["vendored"] }
postgres-openssl = "0.5.0"
regex = "1.5.6"
resvg = "0.23.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_qs = "0.9.2"
tera = { version = "1.16.0", default-features = false }
tiny-skia = "0.6.5"
tokio = {version = "1.19.2", features = ["macros", "rt-multi-thread", "signal"] }
tokio-postgres = { version = "0.7.6", features = ["with-uuid-1", "with-serde_json-1"] }
tower = "0.4.12"
tower-http = { version = "0.3.4", features = ["auth", "fs", "set-header", "trace"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json"] }
usvg = "0.23.0"

[dev-dependencies]
hyper = "0.14.19"
mockall = "0.11.1"
