[package]
name = "clomonitor-apiserver"
description = "Server that exposes the CLOMonitor HTTP API and serves static assets"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
askama = { workspace = true }
askama_axum = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
clomonitor-core = { path = "../clomonitor-core" }
config = { workspace = true }
deadpool-postgres = { workspace = true }
lazy_static = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
mime = { workspace = true }
openssl = { workspace = true }
postgres-openssl = { workspace = true }
regex = { workspace = true }
resvg = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
tera = { workspace = true, default-features = false }
tiny-skia = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
usvg = { workspace = true }

[dev-dependencies]
hyper = { workspace = true }
mockall = { workspace = true }
