[package]
name = "clomonitor-archiver"
description = "A tool that creates snapshots of projects' data periodically"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
deadpool-postgres = { workspace = true }
openssl = { workspace = true }
postgres-openssl = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true, features = ["macros"] }
tokio = { workspace = true, features = ["time"] }
tokio-postgres = { workspace = true, features = ["with-time-0_3"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
uuid = { workspace = true }
