[package]
name = "clomonitor-archiver"
description = "A tool that creates snapshots of projects' data periodically"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
deadpool-postgres = { workspace = true }
openssl = { workspace = true }
postgres-openssl = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
