[package]
name = "clomonitor-core"
version = "0.6.0"
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.60"
askalono = "0.4.6"
clap = { version = "3.2.16", features = ["derive"] }
git2 = "0.15.0"
glob = "0.3.0"
graphql_client = { git = "https://github.com/graphql-rust/graphql-client", rev = "f2faa9feb96067921528eaf65040a3a1776837fc", features = ["reqwest"] }
http = "0.2.8"
lazy_static = "1.4.0"
regex = "1.6.0"
reqwest = "0.11.11"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
serde_yaml = "0.9.4"
time = { version = "0.3.12", features = ["parsing", "serde"] }
tokio = { version = "1.20.1", features = ["macros", "process", "rt-multi-thread"] }
tracing = "0.1.36"
which = "4.2.5"

[dev-dependencies]
wiremock = "0.5.13"
