[package]
name = "clomonitor-core"
version = "0.6.0"
license = "Apache-2.0"
edition = "2021"

[features]
default = []
mocks = []

[dependencies]
anyhow = "1.0.65"
askalono = "0.4.6"
async-trait = "0.1.57"
clap = { version = "3.2.22", features = ["derive"] }
git2 = "0.15.0"
glob = "0.3.0"
graphql_client = { git = "https://github.com/graphql-rust/graphql-client", rev = "f2faa9feb96067921528eaf65040a3a1776837fc", features = ["reqwest"] }
http = "0.2.8"
lazy_static = "1.4.0"
mockall = "0.11.2"
regex = "1.6.0"
reqwest = "0.11.12"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.13"
time = { version = "0.3.14", features = ["parsing", "serde"] }
tokio = { version = "1.21.1", features = ["macros", "process", "rt-multi-thread"] }
tracing = "0.1.36"
which = "4.3.0"

[dev-dependencies]
wiremock = "0.5.14"
