[package]
name = "clomonitor-core"
description = "Core library that provides CLOMonitor's linting capabilities"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = []
mocks = []

[dependencies]
anyhow = { workspace = true }
askalono = { workspace = true }
async-trait = { workspace = true }
cached = { workspace = true }
clap = { workspace = true }
git2 = { workspace = true }
glob = { workspace = true }
graphql_client = { workspace = true }
http = { workspace = true }
mockall = { workspace = true }
postgres-types = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
