[package]
name = "clomonitor-linter"
description = "A tool to check repositories to verify they meet certain project health best practices"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
clomonitor-core = { path = "../clomonitor-core" }
openssl = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
