[package]
name = "clomonitor-notifier"
description = "A tool that notifies projects about certain events"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
deadpool = { workspace = true }
deadpool-postgres = { workspace = true }
octorust = { workspace = true }
openssl = { workspace = true }
postgres-openssl = { workspace = true }
regex = { workspace = true }
rinja = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
mockall = { workspace = true }
