[package]
name = "clomonitor-tracker"
description = "A tool to run the CLOMonitor linter on multiple repositories"
version = "0.6.0"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.58"

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.2.5", features = ["derive"] }
clomonitor-core = { path = "../clomonitor-core" }
config = "0.13.1"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
futures = "0.3.21"
openssl = { version = "0.10.40", features = ["vendored"] }
postgres-openssl = "0.5.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tempfile = "3.3.0"
time = "0.3.11"
tokio = { version = "1.19.2", features = ["macros", "process", "rt-multi-thread", "time"] }
tokio-postgres = { version = "0.7.6", features = ["with-uuid-1", "with-serde_json-1", "with-time-0_3"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json"] }
uuid = "1.1.2"
which = "4.2.5"
