[package]
name = "clomonitor-tracker"
description = "A tool to run the CLOMonitor linter on multiple repositories"
version = "0.6.0"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.58"

[dependencies]
anyhow = "1.0.64"
async-trait = "0.1.57"
clap = { version = "3.2.20", features = ["derive"] }
clomonitor-core = { path = "../clomonitor-core" }
config = "0.13.2"
deadpool = "0.9.5"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
futures = "0.3.24"
openssl = { version = "0.10.41", features = ["vendored"] }
postgres-openssl = "0.5.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tempfile = "3.3.0"
time = "0.3.14"
tokio = { version = "1.21.1", features = ["macros", "process", "rt-multi-thread", "time"] }
tokio-postgres = { version = "0.7.7", features = ["with-uuid-1", "with-serde_json-1", "with-time-0_3"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "json"] }
uuid = "1.1.2"
which = "4.3.0"
