[package]
name = "clomonitor-tracker"
description = "A tool to run the CLOMonitor linter on multiple repositories"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
clomonitor-core = { path = "../clomonitor-core", features = ["mocks"] }
config = { workspace = true }
deadpool = { workspace = true }
deadpool-postgres = { workspace = true }
futures = { workspace = true }
openssl = { workspace = true }
postgres-openssl = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tokio-postgres = { workspace = true, features = ["with-time-0_3"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
which = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
predicates = { workspace = true }
