[package]
name = "remonitor-apiserver"
description = "Server that exposes the ReMonitor HTTP API and serves static assets"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"

[dependencies]
anyhow = "1.0.52"
axum = "0.4.4"
axum-debug = "0.3.2"
clap = { version = "3.0.7", features = ["derive"] }
config = "0.11.0"
deadpool-postgres = { version = "0.10.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.74"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.5", features = ["with-uuid-0_8", "with-serde_json-1"] }
tower = "0.4.11"
tower-http = { version = "0.2.0", features = ["fs", "trace"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.6"
uuid = { version = "0.8.2", features = ["serde"] }
