[package]
name = "remonitor-linter"
description = "A linter for CNCF projects repositories"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"

[dependencies]
anyhow = "1.0.52"
askalono = "0.4.4"
clap = { version = "3.0.7", features = ["derive"] }
glob = "0.3.0"
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.74"
